fix: make code cell output visible in light mode

--- a/notebooks/partials/styles.css
+++ b/notebooks/partials/styles.css
@@ -12,9 +12,5 @@ h1 code,
 h2 code,
 h3 code,
 dl.code-annotation-container-grid dd span code {
-    background-color: #36393d;
-}
-
-div.cell-output pre code {
-    background-color: #272c30;
+    background-color: rgba(233, 236, 239, .1) !important;
 }
